# Ccards

./: .gitignore  CMakeLists.txt  LICENSE  card_skele_test
docs/: README.md  rules.md
src/: CMakeLists.txt  card_skeleton.c  deck_config.c  deck_config.h  general_logic.c  main.c  struct.c
src/card_t/: card_t.c  card_t.h
src/ccard_ai/: CMakeLists.txt  ccard_ai.c  ccard_ai.h
src/general_logic/: CMakeLists.txt  general_logic.c  general_logic.h
src/types/: CMakeLists.txt  types.h
